--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
                              <li>CSS</li>
                         </ul>
                     </p>
-                    <P>Here is the project <span> <a href="url">kiirudavid.github.io/project-1/</a> </span> </P>
-            <li>
-
-            </li>
-        </ol>
+                    <P>Here is the project <span> <a href="kiirudavid.github.io/project-1/">link</a> </span> </P>
     </div>
+       <h2>About Me</h2>     
+       <p>I'm a web developer with a good eye for UI and UX for 2 Months currently, My aim is to become i worldwide 
+           Developer both in software and web creating the best ui and achivieng goals as required by the potential clints.
+       </p>
+       <h2>Hobbies and Intrests</h2>
+       <p>
+           <ul>
+               <li>Poblem solving</li>
+               <li>Reading Educational jounals</li>
+               <li>following up on Hackers news</li>
+               <li>Playing football</li>
+           </ul>
+       </p>
 </body>
 </html>
