added readme and license

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
                <li>Playing football</li>
            </ul>
        </p>
+       <div id="footer">
+           <p> <strong>@</strong> 2020 <em>All rights reserved </em></p>
+       </div>
 </body>
 </html>
