--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
                   <p>
                       This project purpose was to create a platform where clients will be able to find their dream house easily.
                   </p>
-                    <p>language used
+                    <p>language used: </p>
                         <ul>
                             <li>HTML5</li>
                              <li>CSS</li>
+                             <li>javascript</li>
                         </ul>
-                    </p>
-                    <P>Here is the project <span> <a href="kiirudavid.github.io/project-1/">link</a> </span> </P>
+                 
+                    <P>Here is the project <span class="link"> <a href="kiirudavid.github.io/project-1/">link</a> </span> </P>
     </div>
        <h2>About Me</h2>     
        <p>I'm a web developer with a good eye for UI and UX for 2 Months currently, My aim is to become i worldwide 
@@ -42,5 +43,8 @@
        <div id="footer">
            <p> <strong>@</strong> 2020 <em>All rights reserved </em></p>
        </div>
+       <script>
+           alert("welcome");
+       </script>
 </body>
 </html>
