styled the link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                              <li>javascript</li>
                         </ul>
                  
-                    <P>Here is the project <span class="link"> <a href="kiirudavid.github.io/project-1/">link</a> </span> </P>
+                    <P>Here is the project <span class="link"> <a href="https://kiirudavid.github.io/Project-1/">link</a> </span> </P>
     </div>
        <h2>About Me</h2>     
        <p>I'm a web developer with a good eye for UI and UX for 2 Months currently, My aim is to become i worldwide 
@@ -44,7 +44,7 @@
            <p> <strong>@</strong> 2020 <em>All rights reserved </em></p>
        </div>
        <script>
-           alert("welcome");
+           alert("welcome!");
        </script>
 </body>
 </html>
