added comments in html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/stlyes.css" type="text/css" media="all">
 </head>
 <body>
+    <!--MY NAME-->
     <h1 class="name"> DAVID KIIRU</h1>
     <img src="https://images.unsplash.com/photo-1536148935331-408321065b18?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="img rep whom iam">
+    <!--PROJECTS-->
     <div id="projects">
         <h2><strong>Projects Completed</strong></h2>
         <ol>
@@ -27,10 +29,12 @@
                  
                     <P>Here is the project <span class="link"> <a href="https://kiirudavid.github.io/Project-1/">link</a> </span> </P>
     </div>
+          <!--ABOUT ME-->
        <h2>About Me</h2>     
        <p>I'm a web developer with a good eye for UI and UX for 2 Months currently, My aim is to become i worldwide 
            Developer both in software and web creating the best ui and achivieng goals as required by the potential clints.
        </p>
+          <!--HOBBIES-->
        <h2>Hobbies and Intrests</h2>
        <p>
            <ul>
@@ -40,11 +44,13 @@
                <li>Playing football</li>
            </ul>
        </p>
+            <!--COPYRIGHT-->
        <div id="footer">
            <p> <strong>@</strong> 2020 <em>All rights reserved </em></p>
        </div>
+       <!--js-->
        <script>
-           alert("welcome!");
-       </script>
+        alert("welcome!");
+    </script>
 </body>
 </html>
