added project done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/stlyes.css" type="text/css" media="all">
 </head>
 <body>
@@ -15,11 +15,12 @@
         <h2><strong>Projects Completed</strong></h2>
         <ol>
             <li>
-                Better Living property mamagement
+                Better Living property mamagement <strong>&</strong> Online Travel Agency
             </li>
                   <p>
-                      This project purpose was to create a platform where clients will be able to find their dream house easily.
+                      This project purpose was to create a platform where clients will be able to find their dream house easily
                   </p>
+                  <p>and where our locals can travel to their prefferd destinations respectively.</p>
                     <p>language used: </p>
                         <ul>
                             <li>HTML5</li>
