--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                              <li>javascript</li>
                         </ul>
                  
-                    <P>Here is the project <span class="link"> <a href="https://kiirudavid.github.io/Project-1/">link</a> </span> </P>
+                    <P>Here is the project's <span class="link"> <a href="https://kiirudavid.github.io/Project-1/">link</a>, <a href="https://batyrotich.github.io/Online-travel-Agents/">link</a></span> </P>
     </div>
           <!--ABOUT ME-->
        <h2>About Me</h2>     
