--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            <p> <strong>@</strong> 2020 <em>All rights reserved </em></p>
        </div>
        <!--js-->
-       <script>
+       <script id="alert">
         alert("welcome!");
     </script>
 </body>
